update global and template styles: adjust overflow handling and switch background to fixed attachment with 100vh height

--- a/src/app/layouts/components/template-component/template-component.scss
+++ b/src/app/layouts/components/template-component/template-component.scss
@@ -3,6 +3,7 @@
 .background {
 	background: var(--background-color);
 	background-attachment: fixed;
+	min-height: 100vh;
 	background-image: var(--background-picture);
 	background-position: center;
 	background-repeat: no-repeat;
